core/poke-api/overlays/staging/patches/deployment.namespace.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poke-poke-api
spec:
  template:
    spec:
      containers:
      - name: poke-api
